[tool.poetry]
name = "assignment 4"
version = "0.1.0"
description = ""
authors = ["Safo Prince <psam64850@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
faker = "^24.4.0"
mysql-connector-python = "^8.3.0"
pandas = "^2.2.1"
numpy = "^1.26.4"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
